--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -25,6 +25,83 @@ body {
   text-align: center;
 }
 
+/* form styles */
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  width: 80%;
+}
+
+input[type="hidden"] {
+  display: none;
+}
+
+input[type="submit"] {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+input[type="submit"]:hover {
+  background-color: #3e8e41;
+}
+
+@media screen and (max-width: 600px) {
+  form {
+    width: 100%;
+  }
+}
+
+/* Table Style */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+table thead {
+  background-color: #f1f1f1;
+}
+
+table th,
+table td {
+  text-align: left;
+  padding: 12px;
+  border-bottom: 1px solid #ddd;
+}
+
+table td {
+  font-size: 16px;
+}
+
+table td.price {
+  font-weight: bold;
+  color: #333;
+}
+
+table tbody tr:last-child td {
+  font-weight: bold;
+}
+
+table tbody tr:last-child td.price {
+  color: #f44336;
+}
+
+table tbody tr:not(:last-child) td {
+  font-weight: normal;
+  color: #555;
+}
+
+
 /* Products Styles */
 .products {
   display: flex;
